--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,3 +1,11 @@
-.global {
+body {
   font-family: sans-serif;
+  cursor: default;
+}
+
+.listHead {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
 }
