--- a/src/components/Player.module.css
+++ b/src/components/Player.module.css
@@ -30,3 +30,16 @@
 .playerPos {
   font-size: 20px;
 }
+
+.statsTable {
+  border: 1px solid black;
+  border-collapse: collapse;
+  text-align: center;
+  font-size: 20px;
+}
+
+.subPlayerButton {
+  composes: listButton from "./App.module.css";
+  height: 25px;
+  font-size: 16px;
+}
